--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="fold">Fold</string>
     <string name="allIn">All-In</string>
     <string name="call">Call</string>
+    <string name="start">Empezar</string>
 </resources>
